--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-
-
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -42,7 +39,6 @@
   ======================================================== -->
 </head>
 
-  
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center sticky-top">
@@ -340,6 +336,38 @@ I am Nihad, i am a university student studying Script Programming and web develo
         </div>
 
       </div>
+              
+              <!-- Optional Task: Video Section -->
+        <div class="container mt-5" data-aos="fade-up">
+          <h3 class="text-center mb-4">Project Overview Video</h3>
+
+          <!-- YouTube iframe video -->
+          <div class="ratio ratio-16x9 mb-4">
+            <iframe 
+              src="https://www.youtube.com/embed/dD2EISBDjWM"
+              title="Web Development Overview"
+              allowfullscreen>
+            </iframe>
+          </div>
+
+          <!-- Local video -->
+          <video controls width="100%">
+            <source src="assets/media/intro.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          <!-- Optional Task: Audio -->
+<div class="container mt-4" data-aos="fade-up">
+  <h4 class="text-center mb-3">Theme audio</h4>
+
+  <audio controls>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
+
+        </div>
+        <!-- End Optional Task Video Section -->
+
 
     </section><!-- /Services Section -->
 
