--- a/index.html
+++ b/index.html
@@ -357,13 +357,13 @@ I am Nihad, i am a university student studying Script Programming and web develo
           </video>
           <!-- Optional Task: Audio -->
 <div class="container mt-4" data-aos="fade-up">
-  <h4 class="text-center mb-3">Theme audio</h4>
+ <h3>Audio Explanation</h3>
 
-  <audio controls>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-</div>
+<audio controls>
+  <source src="assets/media/intro.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 
         </div>
         <!-- End Optional Task Video Section -->
